<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_controllers</name>
  <version>0.0.0</version>
  <description>ROS 2 controllers that can be used with Spot</description>
  <maintainer email="engineering@theaiinstitute.com">khughes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>spot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
