<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 driver nodes for Spot.</description>
  <maintainer email="engineering@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>bdai_ros2_wrappers</depend>
  <depend>bosdyn</depend>
  <depend>common_interfaces</depend>
  <depend>depth_image_proc</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>protobuf</depend>
  <depend>python3-protobuf</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>spot_description</depend>
  <depend>spot_msgs</depend>
  <depend>spot_wrapper</depend>
  <depend>tf2_ros</depend>
  <depend>tl_expected</depend>
  <depend>xacro</depend>


  <!-- Support for gtest and gmock-based tests in the ament buildsystem in CMake. -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
