<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 driver nodes for Spot.</description>
  <maintainer email="engineering@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>bondcpp</depend>
  <depend>bosdyn</depend>
  <depend>bosdyn_cmake_module</depend>
  <depend>bosdyn_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>depth_image_proc</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>protobuf</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>spot_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tl_expected</depend>

  <exec_depend>bondpy</exec_depend>
  <exec_depend>synchros2</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>spot_common</exec_depend>
  <exec_depend>spot_description</exec_depend>
  <exec_depend>spot_ros2_control</exec_depend>
  <exec_depend>spot_wrapper</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Support for gtest and gmock-based tests in the ament buildsystem in CMake. -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-yaml</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
